src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    comment

Grammar

Rule 0     S' -> sigma
Rule 1     sigma -> xml version codificacion DOCTYPE article
Rule 2     article -> o_Article lang title info A c_Article
Rule 3     article -> o_Article lang title A c_Article
Rule 4     A -> itemizedList A
Rule 5     A -> important A
Rule 6     A -> para A
Rule 7     A -> simPara A
Rule 8     A -> articleInfo A
Rule 9     A -> address A
Rule 10    A -> mediaObject A
Rule 11    A -> informalTable A
Rule 12    A -> COMMENT A
Rule 13    A -> abstract A
Rule 14    A -> simpleSec A
Rule 15    A -> section A
Rule 16    A -> info A
Rule 17    A -> empty
Rule 18    section -> o_Section title S c_Section
Rule 19    section -> c_Section title info S c_Section
Rule 20    S -> itemizedList S
Rule 21    S -> important S
Rule 22    S -> para S
Rule 23    S -> simPara S
Rule 24    S -> address S
Rule 25    S -> mediaObject S
Rule 26    S -> informalTable S
Rule 27    S -> COMMENT S
Rule 28    S -> abstract S
Rule 29    S -> empty
Rule 30    simpleSec -> o_SimpleSec S c_SimpleSec
Rule 31    simpleSec -> o_SimpleSec info S c_SimpleSec
Rule 32    simpleSec -> o_SimpleSec title S c_SimpleSec
Rule 33    simpleSec -> o_SimpleSec info title S c_SimpleSec
Rule 34    info -> o_Info I c_Info
Rule 35    articleInfo -> o_ArticleInfo I c_ArticleInfo
Rule 36    I -> mediaObject I
Rule 37    I -> abstract I
Rule 38    I -> address I
Rule 39    I -> author I
Rule 40    I -> date I
Rule 41    I -> copyright I
Rule 42    I -> title I
Rule 43    I -> mediaObject
Rule 44    I -> abstract
Rule 45    I -> address
Rule 46    I -> author
Rule 47    I -> date
Rule 48    I -> copyright
Rule 49    I -> title
Rule 50    abstract -> o_Abstract title R c_Abstract
Rule 51    abstract -> c_Abstract R o_Abstract
Rule 52    R -> para R
Rule 53    R -> simPara R
Rule 54    R -> para
Rule 55    R -> simPara
Rule 56    address -> o_Address D c_Address
Rule 57    D -> texto D
Rule 58    D -> street D
Rule 59    D -> city D
Rule 60    D -> state D
Rule 61    D -> phone D
Rule 62    D -> email D
Rule 63    D -> empty
Rule 64    author -> o_Author firstName U surname c_Author
Rule 65    U -> firstName U
Rule 66    U -> U surname
Rule 67    U -> empty
Rule 68    copyright -> o_Copyright year C c_Copyright
Rule 69    C -> year C
Rule 70    C -> C holder
Rule 71    C -> empty
Rule 72    title -> o_Title T c_Title
Rule 73    T -> T T
Rule 74    T -> texto
Rule 75    T -> emphasis
Rule 76    T -> link
Rule 77    T -> email
Rule 78    simPara -> o_SimPara X c_SimPara
Rule 79    emphasis -> o_Emphasis X c_Emphasis
Rule 80    COMMENT -> o_Comment X c_Comment
Rule 81    X -> X X
Rule 82    X -> texto
Rule 83    X -> emphasis
Rule 84    X -> link
Rule 85    X -> email
Rule 86    X -> author
Rule 87    X -> COMMENT
Rule 88    link -> o_Link url X c_Link
Rule 89    para -> o_Para P c_Para
Rule 90    P -> P P
Rule 91    P -> texto
Rule 92    P -> emphasis
Rule 93    P -> link
Rule 94    P -> email
Rule 95    P -> author
Rule 96    P -> COMMENT
Rule 97    P -> itemizedList
Rule 98    P -> important
Rule 99    P -> address
Rule 100   P -> mediaObject
Rule 101   P -> informalTable
Rule 102   important -> o_Important M c_Important
Rule 103   important -> o_Important title M c_Important
Rule 104   M -> M M
Rule 105   M -> itemizedList
Rule 106   M -> para
Rule 107   M -> simPara
Rule 108   M -> address
Rule 109   M -> mediaObject
Rule 110   M -> informalTable
Rule 111   M -> COMMENT
Rule 112   M -> abstract
Rule 113   firstName -> o_FirstName Y c_FirstName
Rule 114   surname -> o_Surname Y c_Surname
Rule 115   street -> o_Street Y c_Street
Rule 116   city -> o_City Y c_City
Rule 117   state -> o_State Y c_State
Rule 118   phone -> o_Phone Y c_Phone
Rule 119   email -> o_Email Y c_Email
Rule 120   date -> o_Date Y c_Date
Rule 121   year -> o_Year Y c_Year
Rule 122   holder -> o_Holder Y c_Holder
Rule 123   Y -> texto Y
Rule 124   Y -> link Y
Rule 125   Y -> emphasis Y
Rule 126   Y -> COMMENT Y
Rule 127   Y -> texto
Rule 128   Y -> link
Rule 129   Y -> emphasis
Rule 130   Y -> COMMENT
Rule 131   mediaObject -> o_MediaObject info Vi c_MediaObject
Rule 132   mediaObject -> o_MediaObject Vi c_MediaObject
Rule 133   Vi -> videoObject Vi
Rule 134   Vi -> imageObject Vi
Rule 135   Vi -> videoObject
Rule 136   Vi -> imageObject
Rule 137   videoObject -> o_VideoObject info videoData c_VideoObject
Rule 138   videoObject -> o_VideoObject videoData c_VideoObject
Rule 139   videoData -> VideoData url2
Rule 140   imageObject -> o_ImageObject info imageData c_ImageObject
Rule 141   imageObject -> o_ImageObject imageData c_ImageObject
Rule 142   imageData -> ImageData url2
Rule 143   itemizedList -> o_ItemizedList listItem Z c_ItemizedList
Rule 144   Z -> listItem Z
Rule 145   Z -> empty
Rule 146   listItem -> o_ListItem L c_ListItem
Rule 147   L -> itemizedList L
Rule 148   L -> important L
Rule 149   L -> para L
Rule 150   L -> simPara L
Rule 151   L -> address L
Rule 152   L -> mediaObject L
Rule 153   L -> informalTable L
Rule 154   L -> COMMENT L
Rule 155   L -> abstract L
Rule 156   L -> itemizedList
Rule 157   L -> important
Rule 158   L -> para
Rule 159   L -> simPara
Rule 160   L -> address
Rule 161   L -> mediaObject
Rule 162   L -> informalTable
Rule 163   L -> COMMENT
Rule 164   L -> abstract
Rule 165   informalTable -> o_InformalTable TG c_InformalTable
Rule 166   TG -> mediaObject TG
Rule 167   TG -> tgroup TG
Rule 168   TG -> mediaObject
Rule 169   TG -> tgroup
Rule 170   tgroup -> o_Tgroup tbody thead tfoot c_Tgroup
Rule 171   tgroup -> o_Tgroup thead tbody thead tfoot c_Tgroup
Rule 172   tgroup -> o_Tgroup tfoot tbody thead tfoot c_Tgroup
Rule 173   tgroup -> o_Tgroup thead tfoot tbody thead tfoot c_Tgroup
Rule 174   tbody -> o_Tbody ROW ROW c_Tbody
Rule 175   tfoot -> o_Tfoot ROW ROW c_Tfoot
Rule 176   thead -> o_Thead ROW ROW c_Thead
Rule 177   ROW -> ROW2 ROW
Rule 178   ROW -> empty
Rule 179   ROW2 -> o_Row W c_Row
Rule 180   W -> entry W
Rule 181   W -> entrytbl W
Rule 182   W -> entry
Rule 183   W -> entrytbl
Rule 184   entrytbl -> o_Entrytbl tbody c_Entrytbl
Rule 185   entrytbl -> o_Entrytbl thead tbody c_Entrytbl
Rule 186   entry -> o_Entry J c_Entry
Rule 187   J -> texto J
Rule 188   J -> itemizedList J
Rule 189   J -> important J
Rule 190   J -> para J
Rule 191   J -> simPara J
Rule 192   J -> mediaObject J
Rule 193   J -> COMMENT J
Rule 194   J -> abstract J
Rule 195   J -> empty
Rule 196   empty -> <empty>

Terminals, with rules where they appear

DOCTYPE              : 1
ImageData            : 142
VideoData            : 139
c_Abstract           : 50 51
c_Address            : 56
c_Article            : 2 3
c_ArticleInfo        : 35
c_Author             : 64
c_City               : 116
c_Comment            : 80
c_Copyright          : 68
c_Date               : 120
c_Email              : 119
c_Emphasis           : 79
c_Entry              : 186
c_Entrytbl           : 184 185
c_FirstName          : 113
c_Holder             : 122
c_ImageObject        : 140 141
c_Important          : 102 103
c_Info               : 34
c_InformalTable      : 165
c_ItemizedList       : 143
c_Link               : 88
c_ListItem           : 146
c_MediaObject        : 131 132
c_Para               : 89
c_Phone              : 118
c_Row                : 179
c_Section            : 18 19 19
c_SimPara            : 78
c_SimpleSec          : 30 31 32 33
c_State              : 117
c_Street             : 115
c_Surname            : 114
c_Tbody              : 174
c_Tfoot              : 175
c_Tgroup             : 170 171 172 173
c_Thead              : 176
c_Title              : 72
c_VideoObject        : 137 138
c_Year               : 121
codificacion         : 1
comment              : 
error                : 
lang                 : 2 3
o_Abstract           : 50 51
o_Address            : 56
o_Article            : 2 3
o_ArticleInfo        : 35
o_Author             : 64
o_City               : 116
o_Comment            : 80
o_Copyright          : 68
o_Date               : 120
o_Email              : 119
o_Emphasis           : 79
o_Entry              : 186
o_Entrytbl           : 184 185
o_FirstName          : 113
o_Holder             : 122
o_ImageObject        : 140 141
o_Important          : 102 103
o_Info               : 34
o_InformalTable      : 165
o_ItemizedList       : 143
o_Link               : 88
o_ListItem           : 146
o_MediaObject        : 131 132
o_Para               : 89
o_Phone              : 118
o_Row                : 179
o_Section            : 18
o_SimPara            : 78
o_SimpleSec          : 30 31 32 33
o_State              : 117
o_Street             : 115
o_Surname            : 114
o_Tbody              : 174
o_Tfoot              : 175
o_Tgroup             : 170 171 172 173
o_Thead              : 176
o_Title              : 72
o_VideoObject        : 137 138
o_Year               : 121
texto                : 57 74 82 91 123 127 187
url                  : 88
url2                 : 139 142
version              : 1
xml                  : 1

Nonterminals, with rules where they appear

A                    : 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16
C                    : 68 69 70
COMMENT              : 12 27 87 96 111 126 130 154 163 193
D                    : 56 57 58 59 60 61 62
I                    : 34 35 36 37 38 39 40 41 42
J                    : 186 187 188 189 190 191 192 193 194
L                    : 146 147 148 149 150 151 152 153 154 155
M                    : 102 103 104 104
P                    : 89 90 90
R                    : 50 51 52 53
ROW                  : 174 174 175 175 176 176 177
ROW2                 : 177
S                    : 18 19 20 21 22 23 24 25 26 27 28 30 31 32 33
T                    : 72 73 73
TG                   : 165 166 167
U                    : 64 65 66
Vi                   : 131 132 133 134
W                    : 179 180 181
X                    : 78 79 80 81 81 88
Y                    : 113 114 115 116 117 118 119 120 121 122 123 124 125 126
Z                    : 143 144
abstract             : 13 28 37 44 112 155 164 194
address              : 9 24 38 45 99 108 151 160
article              : 1
articleInfo          : 8
author               : 39 46 86 95
city                 : 59
copyright            : 41 48
date                 : 40 47
email                : 62 77 85 94
emphasis             : 75 83 92 125 129
empty                : 17 29 63 67 71 145 178 195
entry                : 180 182
entrytbl             : 181 183
firstName            : 64 65
holder               : 70
imageData            : 140 141
imageObject          : 134 136
important            : 5 21 98 148 157 189
info                 : 2 16 19 31 33 131 137 140
informalTable        : 11 26 101 110 153 162
itemizedList         : 4 20 97 105 147 156 188
link                 : 76 84 93 124 128
listItem             : 143 144
mediaObject          : 10 25 36 43 100 109 152 161 166 168 192
para                 : 6 22 52 54 106 149 158 190
phone                : 61
section              : 15
sigma                : 0
simPara              : 7 23 53 55 107 150 159 191
simpleSec            : 14
state                : 60
street               : 58
surname              : 64 66
tbody                : 170 171 172 173 184 185
tfoot                : 170 171 172 172 173 173
tgroup               : 167 169
thead                : 170 171 171 172 173 173 185
title                : 2 3 18 19 32 33 42 49 50 103
videoData            : 137 138
videoObject          : 133 135
year                 : 68 69

Parsing method: LALR

state 0

    (0) S' -> . sigma
    (1) sigma -> . xml version codificacion DOCTYPE article

    xml             shift and go to state 2

    sigma                          shift and go to state 1

state 1

    (0) S' -> sigma .



state 2

    (1) sigma -> xml . version codificacion DOCTYPE article

    version         shift and go to state 3


state 3

    (1) sigma -> xml version . codificacion DOCTYPE article

    codificacion    shift and go to state 4


state 4

    (1) sigma -> xml version codificacion . DOCTYPE article

    DOCTYPE         shift and go to state 5


state 5

    (1) sigma -> xml version codificacion DOCTYPE . article
    (2) article -> . o_Article lang title info A c_Article
    (3) article -> . o_Article lang title A c_Article

    o_Article       shift and go to state 7

    article                        shift and go to state 6

state 6

    (1) sigma -> xml version codificacion DOCTYPE article .

    $end            reduce using rule 1 (sigma -> xml version codificacion DOCTYPE article .)


state 7

    (2) article -> o_Article . lang title info A c_Article
    (3) article -> o_Article . lang title A c_Article

    lang            shift and go to state 8


state 8

    (2) article -> o_Article lang . title info A c_Article
    (3) article -> o_Article lang . title A c_Article
    (72) title -> . o_Title T c_Title

    o_Title         shift and go to state 10

    title                          shift and go to state 9

state 9

    (2) article -> o_Article lang title . info A c_Article
    (3) article -> o_Article lang title . A c_Article
    (34) info -> . o_Info I c_Info
    (4) A -> . itemizedList A
    (5) A -> . important A
    (6) A -> . para A
    (7) A -> . simPara A
    (8) A -> . articleInfo A
    (9) A -> . address A
    (10) A -> . mediaObject A
    (11) A -> . informalTable A
    (12) A -> . COMMENT A
    (13) A -> . abstract A
    (14) A -> . simpleSec A
    (15) A -> . section A
    (16) A -> . info A
    (17) A -> . empty
    (143) itemizedList -> . o_ItemizedList listItem Z c_ItemizedList
    (102) important -> . o_Important M c_Important
    (103) important -> . o_Important title M c_Important
    (89) para -> . o_Para P c_Para
    (78) simPara -> . o_SimPara X c_SimPara
    (35) articleInfo -> . o_ArticleInfo I c_ArticleInfo
    (56) address -> . o_Address D c_Address
    (131) mediaObject -> . o_MediaObject info Vi c_MediaObject
    (132) mediaObject -> . o_MediaObject Vi c_MediaObject
    (165) informalTable -> . o_InformalTable TG c_InformalTable
    (80) COMMENT -> . o_Comment X c_Comment
    (50) abstract -> . o_Abstract title R c_Abstract
    (51) abstract -> . c_Abstract R o_Abstract
    (30) simpleSec -> . o_SimpleSec S c_SimpleSec
    (31) simpleSec -> . o_SimpleSec info S c_SimpleSec
    (32) simpleSec -> . o_SimpleSec title S c_SimpleSec
    (33) simpleSec -> . o_SimpleSec info title S c_SimpleSec
    (18) section -> . o_Section title S c_Section
    (19) section -> . c_Section title info S c_Section
    (196) empty -> .

    o_Info          shift and go to state 13
    o_ItemizedList  shift and go to state 27
    o_Important     shift and go to state 28
    o_Para          shift and go to state 29
    o_SimPara       shift and go to state 30
    o_ArticleInfo   shift and go to state 31
    o_Address       shift and go to state 32
    o_MediaObject   shift and go to state 33
    o_InformalTable shift and go to state 34
    o_Comment       shift and go to state 35
    o_Abstract      shift and go to state 36
    c_Abstract      shift and go to state 37
    o_SimpleSec     shift and go to state 38
    o_Section       shift and go to state 39
    c_Section       shift and go to state 40
    c_Article       reduce using rule 196 (empty -> .)
